envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 8001 }


static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 8010 }
      filter_chains:
      - filters:
        - name: envoy.http_connection_manager
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
            stat_prefix: ingress_http
            codec_type: AUTO
            route_config:
              name: local_route
              request_headers_to_remove: ["Authorization"]
              virtual_hosts:
              - name: local_service
                domains: ["*"]
                routes:
                - match: { prefix: "/slowpath" }
                  route: 
                    cluster: backend
                    rate_limits:
                      - stage: 0
                        actions:
                          - {generic_key: {"descriptor_value": "slowpath"}}
                - match: { prefix: "/" }
                  route: 
                    cluster: backend
                    rate_limits:
                      - stage: 0
                        actions:
                          - {request_headers: {header_name: "x-ext-auth-ratelimit", descriptor_key: "ratelimitkey"}}
                          - {request_headers: {header_name: ":path", descriptor_key: "path"}}
            http_filters:
            - name: envoy.ext_authz
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                grpc_service:
                  envoy_grpc:
                    cluster_name: extauth
                transport_api_version: V3
            - name: envoy.rate_limit
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimit
                domain: backend
                stage: 0
                failure_mode_deny: false
                rate_limited_as_resource_exhausted: true
                enable_x_ratelimit_headers: DRAFT_VERSION_03
                rate_limit_service:
                  grpc_service:
                    envoy_grpc:
                      cluster_name: rate_limit_cluster
                  transport_api_version: V3
            - name: envoy.filters.http.router
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: backend
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: round_robin
    load_assignment:
      cluster_name: backend
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: backend
                port_value: 8123

  - name: extauth
    type: STRICT_DNS
    connect_timeout: 0.25s
    http2_protocol_options: {}
    load_assignment:
      cluster_name: extauth
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: extauth
                port_value: 4000

  - name: rate_limit_cluster
    type: strict_dns
    connect_timeout: 0.25s
    lb_policy: round_robin
    http2_protocol_options: {}
    load_assignment:
      cluster_name: extauth
      endpoints:
      - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: ratelimit
                  port_value: 8081
